--- a/custom_components/openplantbook/manifest.json
+++ b/custom_components/openplantbook/manifest.json
@@ -17,7 +17,8 @@
   ],
   "requirements": [
     "json-timeseries==0.1.7",
-    "openplantbook-sdk==0.4.7"
+    "beautifulsoup4>=4.9.3",
+    "aiohttp>=3.8.1"
   ],
   "version": "1.3.0"
 }
